# bayes-inference

./: .gitignore  Makefile  pyproject.toml  readme.md
examples/: dices.py
src/enigma/: hypotheses.py  random_variables.py
src/posterior/: __init__.py  distributions.py  hypotheses.py  random_variables.py
tests/: test_problems.py
